# yast-power-management

./: .gitignore  README.md  RPMNAME  VERSION  power-management.pot  yast2-power-management.spec.in
agents/: Makefile.am  cfg_powersave_common.scr  etc_pm-profiler.scr  etc_pm-profiler_profiles.scr  etc_powersave_conf.scr
doc/autodocs/: Makefile.am
package/: yast2-power-management.changes  yast2-power-management.spec
power-management/: .cvsignore  yast2-power-management.spec.in
power-management/agents/: Makefile.am  cfg_powersave_global.scr  cfg_powersave_schemes.scr
power-management/package/: yast2-power-management.changes
power-management/src/: Makefile.am  PowerManagement.ycp  commandline.ycp  dialogs.ycp  helps.ycp  misc.ycp  power-management.desktop  power-management.ycp  widgets.ycp  wizards.ycp
power-management/testsuite/tests/: PowerManagement.out
src/: Makefile.am  PowerManagement.ycp  commandline.ycp  dialogs.ycp  helps.ycp  misc.ycp  power-management.desktop  power-management.rnc  power-management.ycp  power-management_auto.ycp  widgets.ycp  wizards.ycp
src/clients/: power-management.rb  power-management.ycp  power-management_auto.rb
src/desktop/: power-management.desktop
src/include/power-management/: commandline.rb  dialogs.rb  helps.rb  helps.ycp  widgets.rb  widgets.ycp  wizards.rb
src/modules/: PowerManagement.rb  PowerManagement.ycp
testsuite/tests/: PowerManagement.rb  PowerManagement.ycp
